# jax-to-tfjs-demo

./: .gitignore  README.md  evaluate.py  pyproject.toml  pytest.ini
.cursor/: conventions.md  info.md  plan.md
docs/: TensorFlow-JAX-FLAX-변환-가이드.md  TensorFlow-JS-모델-로딩-가이드.md
results/results/jax_metrics.json/: evaluation_metrics.json
src/: evaluate.py
src/jax_to_tfjs/: __init__.py  cli.py  convert_to_tfjs.py  paths.py
src/jax_to_tfjs/checkpoint_utils/: __init__.py  info.py  loader.py  validation.py
src/jax_to_tfjs/conf/: __init__.py  logging_config.py  path.py  paths.py
src/jax_to_tfjs/conf/config/: __init__.py  conversion.py  data.py  loader.py  paths.py  training.py
src/jax_to_tfjs/conf/tests/: __init__.py  conftest.py  test_logging_config.py  test_path.py
src/jax_to_tfjs/conf/tests/test_config/: __init__.py  test_conversion.py  test_data.py  test_loader.py  test_paths.py  test_training.py
src/jax_to_tfjs/conf/tests/test_types/: __init__.py  test_array_types.py  test_model_types.py  test_utils.py
src/jax_to_tfjs/conf/types/: __init__.py  array_types.py  model_types.py  utils.py
src/jax_to_tfjs/evaluation/: __init__.py  __main__.py  cli.py  data.py  evaluator.py  metrics.py  visualization.py
src/jax_to_tfjs/evaluation/models/: __init__.py  flax_evaluator.py  jax_evaluator.py
src/jax_to_tfjs/evaluation/types/: __init__.py  metrics.py
src/jax_to_tfjs/models/: __init__.py  flax_mnist_cnn.py  jax_mnist_cnn.py  model_manager.py
src/jax_to_tfjs/models/common/: __init__.py  train_utils.py
src/jax_to_tfjs/models/flax/: __init__.py  cnn_model.py  model_manager.py  utils.py
src/jax_to_tfjs/models/jax/: __init__.py  autoencoder_manager.py  autoencoder_model.py  cnn_model.py  model_manager.py  utils.py
src/jax_to_tfjs/test_utils/: __init__.py  seed_utils.py
src/jax_to_tfjs/train/: __init__.py  __main__.py  base_evaluator.py  base_trainer.py  data_loader.py  flax_evaluator.py  flax_trainer.py  jax_evaluator.py  jax_trainer.py  test_flax_trainer.py  test_jax_trainer.py  test_pipeline.py
src/jax_to_tfjs_demo/: train_flax_mnist.py  train_jax_mnist.py  train_mnist.py
src/jax_to_tfjs_demo/models/: flax_mnist_cnn.py  jax_mnist_cnn.py  mnist_cnn.py
tests/jax_to_tfjs/checkpoint_utils/: test_checkpoints.py  test_info.py  test_loader.py  test_validation.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.svelte
